# megasena

./: .gitignore  ARIMA_IMPLEMENTATION_SUMMARY.md  EVALUATION_GUIDE.md  FEATURE_ENGINEERING_README.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  LSTM_IMPLEMENTATION_SUMMARY.md  LSTM_QUICK_REFERENCE.md  Mega-Sena.csv  PROPHET_IMPLEMENTATION_SUMMARY.md  Previsão de Loterias com Python.md  QUICK_START.md  QUICK_START_ARIMA.md  README.md  UTILS_GUIDE.md  demo_evaluation.py  examples_feature_engineer.py  main.py  pyproject.toml  requirements.txt  test_feature_engineer.py  test_utils.py
config/: __init__.py  settings.py
docs/: LSTM_MODEL.md  arima_model_guide.md  arima_quick_reference.md  prophet_model_guide.md
examples/: arima_usage_example.py  lstm_example.py  prophet_example.py
results/: ANALISE_MEGA_SENA_2500.md  analysis_data.json  estrategia_2500.txt  jogos_otimos.txt  jogos_top10.txt  jogos_top12.txt  jogos_top8.txt  predictions.csv
src/: __init__.py  pipeline.py
src/data/: __init__.py  loader.py  preprocessor.py
src/evaluation/: __init__.py  metrics.py  wheeling.py
src/features/: __init__.py  engineer.py
src/models/: __init__.py  arima_model.py  lstm_model.py  prophet_model.py
src/utils/: __init__.py  statistics.py  visualization.py
tests/: test_arima_model.py  test_lstm_model.py  test_prophet_model.py
